# fundamentals-computer-animation

./: README.md  main.cpp
Assignment 1/: LICENSE.md  README.md
Assignment 1/DesktopBuild/: CMakeCache.txt  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  curve_surfing.sln  curve_surfing.vcxproj  curve_surfing.vcxproj.filters  glad.vcxproj  glad.vcxproj.filters
Assignment 1/LaptopBuild/: CMakeCache.txt  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  curve_surfing.sln  curve_surfing.vcxproj  curve_surfing.vcxproj.filters  glad.vcxproj  glad.vcxproj.filters
Assignment 1/LaptopBuild/shaders/: basic_fs.glsl
Assignment 1/include/geometry/: curve.h
Assignment 1/resources/curves/: coaster.blend
Assignment 1/src/: main.cpp
Assignment 1/src/opengl/: shader.cpp
Assignment 2/: folding-comb-animating-start.blend  folding-comb-animating-start.blend1  folding-comb-animation'.blend  folding-comb-animation'.blend1  folding-comb-rerig.blend  folding-comb-rig.blend  folding-comb-rig.blend1  folding-comb.blend  folding-comb.blend1  readme.md  storyboard 1.mdp
Assignment 2/blender/: lamp-animation.blend  lamp-armature.blend  lamp-base.blend
Assignment 2/full-render/: Video-Final.mkv
Assignment 2/test-render/: 0001-0240.mkv
Assignment 3/: README.md  README.txt
Assignment 3/Assignment 3 Submission/src/: main.cpp
Assignment 4/: README.md
Assignment 4/libs/: io.h
Assignment 4/res/: bird.blend
Assignment 4/src/: main.cpp  panel.cpp  panel.h
blender/: backdrop-lighting.blend  lamp-animation.blend  lamp-animation.blend1  lamp-armature.blend1  lamp-base.blend1
curve_surfing/: CMakeLists.txt
curve_surfing/DesktopBuild/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  ZERO_CHECK.vcxproj  curve_surfing.sln  curve_surfing.vcxproj  glad.vcxproj  glad.vcxproj.filters
curve_surfing/LaptopBuild/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  ZERO_CHECK.vcxproj  cmake_install.cmake  curve_surfing.vcxproj  glad.vcxproj
curve_surfing/curve_surfing/: README.md
curve_surfing/curve_surfing/include/geometry/: curve.h  curvefileio.h
curve_surfing/curve_surfing/include/opengl/: openglmatrix.h
curve_surfing/curve_surfing/include/scene/: camera.h
curve_surfing/curve_surfing/resources/shaders/: basic_vs.glsl
curve_surfing/curve_surfing/src/: main.cpp
curve_surfing/curve_surfing/src/math/: mat4f.cpp  vec3f.cpp
curve_surfing/curve_surfing/src/opengl/: openglmatrix.cpp
curve_surfing/curve_surfing/src/scene/: camera.cpp
curve_surfing/include/math/: mat4f.h  vec3f.h
curve_surfing/include/opengl/: openglmatrix.h  program.h  shader.h
curve_surfing/resources/meshes/: cart.blend
curve_surfing/src/: main.cpp
curve_surfing/src/geometry/: curve.cpp  curvefileio.cpp
curve_surfing/src/opengl/: openglmatrix.cpp  program.cpp
givr-simple-project-v0.0.7/Assignment 3/: CMakeLists.txt  LICENSE
givr-simple-project-v0.0.7/Assignment 3 Submission/libs/: givr.cpp
givr-simple-project-v0.0.7/givr-simple-project-v0.0.7/: README.md  README.txt
givr-simple-project-v0.0.7/givr-simple-project-v0.0.7/libs/: givr.h
givr-simple-project-v0.0.7/givr-simple-project-v0.0.7/src/: main.cpp
menu/: CMakeLists.txt
menu/libs/: curve_gallery.cpp  curve_gallery.h  givr.cpp  givr.h  turntable_controls.h
menu/libs/imgui/: curve.h
menu/res/: parameters.txt
menu/src/: main.cpp  panel.cpp
src/: Documentation
